test/library/standard/Map/testInitGenericError.chpl
use Map;

class C {
  var x = 10;
}

var l = new map(C, int);  // C has generic management
writeln(l);
